test/Constraints/keypath_closure_conv_mismatch.code
// RUN: %target-language-frontend -typecheck -verify -primary-file %s

// rdar://problem/57930643
struct School {
  var name: String
}
fn testKeyPathClosureLiteralError() -> [School] {
  immutable slist = [School(name:"AHS"), School(name:"BHS")]
  return slist.sorted(by: \School.name) // expected-error {{cannot convert key path into a multi-argument function type '(School, School) throws -> Bool'}}
}
